hero section mobile fixes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,7 +20,8 @@
 .linkedInBtnDiv {
   display: flex;
   width: 94%;
-  margin-top: -30px;
+  margin-top: -50px;
+  margin-bottom: 30px;
 }
 
 .section2 {
@@ -38,7 +39,7 @@
 
 .mainHeading1 {
   margin-bottom: -40px;
-  margin-top: -10px;
+  margin-top: -60px;
 }
 
 .workImg {
@@ -156,14 +157,21 @@
   }
 
   .linkedInBtn {
-    margin-top: -20px;
+    margin-top: -25px;
+    max-width: 120px;
   }
-}
 
-@media (max-width: 775px) {
+  .mainHeading1,
+  .mainHeading {
+    font-size: 2.4rem;
+  }
 
-  .linkedInBtn {
+  .mainHeading1 {
     margin-top: -10px;
+  }
+
+  .linkedInBtnDiv {
+    margin-top: -20px;
   }
 }
 
@@ -214,6 +222,14 @@
   .workImg {
     width: 70%;
   }
+
+  .linkedInBtnDiv {
+    margin-top: -10px;
+  }
+
+  .linkedInBtn {
+    max-width: 110px;
+  }
 }
 
 @media (max-width: 605px) {
@@ -233,7 +249,7 @@
   }
 
   .linkedInBtn {
-    width: 100px;
+    width: 110px;
     margin-top: 30px;
     margin-bottom: -30px;
   }
@@ -257,10 +273,15 @@
     margin-bottom: 30px;
   }
 
+  .mainHeading1 {
+    margin-top: 10px;
+  }
+
   .linkedInBtnDiv {
     width: 100%;
     justify-content: center;
     margin-top: 0px;
+    margin-bottom: 10px;
   }
 
   .introP {
